<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
  
    <name>DisUnity</name>
    <artifactId>disunity</artifactId>
    <groupId>info.ata4.disunity</groupId>
    <packaging>pom</packaging>
    <version>0.5-SNAPSHOT</version>
    <description>An experimental toolset for Unity asset and asset bundle files.</description>
    <url>https://github.com/ata4/disunity</url>
  
    <licenses>
        <license>
            <name>Unlicense</name>
            <url>http://unlicense.org</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    
    <dependencies>      
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.4</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.3.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.5</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>19.0-rc2</version>
        </dependency>

        <!-- Dependencies from jitpack.io -->
        <dependency>
            <groupId>com.github.ata4</groupId>
            <artifactId>lzmajio</artifactId>
            <version>e6877e7e01</version>
        </dependency>
        <dependency>
            <groupId>com.github.ata4</groupId>
            <artifactId>ioutils</artifactId>
            <version>047e401d73</version>
        </dependency>
    </dependencies>
    
    <modules>
        <module>disunity-core</module>
        <module>disunity-cli</module>
        <module>disunity-dist</module>
    </modules>

</project>